# halo2-pse

./: .gitignore  Cargo.toml
browser/scripts/: build_wasm.sh
bus-mapping/: Cargo.toml
ecc/: Cargo.toml
ecc/src/: base_field_ecc.rs  ecc.rs  general_ecc.rs  lib.rs
ecc/src/base_field_ecc/: add.rs  mul.rs
ecc/src/general_ecc/: add.rs  mul.rs
ecdsa/: Cargo.toml
ecdsa/src/: ecdsa.rs  lib.rs
eth-types/: Cargo.toml
eth-types/src/: lib.rs
exp/: Cargo.toml
exp/src/: lib.rs  test.rs
gadgets/: Cargo.toml
gadgets/src/: evm_word.rs  is_zero.rs  less_than.rs  mul_add.rs
halo2_gadgets/: Cargo.toml  secp_fp_inv  secp_fp_mds  secp_fq  secp_fq_inv  secp_fq_mds
halo2_gadgets/benches/: poseidon.rs  primitives.rs  sha256.rs
halo2_gadgets/src/: ecc.rs  ecc2.rs  lib.rs  poseidon.rs  sha256_sec.rs  sinsemilla.rs  utilities.rs
halo2_gadgets/src/ecc/: chip.rs
halo2_gadgets/src/poseidon/: merkle.rs  pow5.rs  primitives.rs
halo2_gadgets/src/sha256/: table16.rs
halo2_gadgets/src/sha256_sec/: table16.rs  testing.rs
halo2_gadgets/src/sinsemilla/: chip.rs  merkle.rs  primitives.rs
halo2_gadgets/src/utilities/: cond_swap.rs  decompose_running_sum.rs  lookup_range_check.rs
halo2_proofs/: Cargo.toml
halo2_proofs/benches/: fft.rs
halo2_proofs/examples/: circuit-layout.rs  serialization.rs  simple-example.rs
halo2_proofs/src/: arithmetic.rs  circuit.rs  dev.rs  helpers_pse.rs  lib.rs  plonk.rs  poly.rs  poly_pse.rs  transcript_pse.rs
halo2_proofs/src/circuit/: layouter.rs  value.rs
halo2_proofs/src/dev/: cost.rs  failure.rs  gates.rs  util.rs
halo2_proofs/src/plonk/: assigned.rs  circuit.rs  evaluation.rs  keygen.rs  lookup.rs  permutation.rs  prover.rs  verifier.rs
halo2_proofs/src/poly/: commitment.rs  (+2 more)
halo2curves/: Cargo.toml
halo2curves/src/: lib.rs
halo2wrong/: Cargo.toml
halo2wrong/src/: lib.rs  utils.rs
integer/: Cargo.toml
integer/src/: chip.rs  instructions.rs  lib.rs  rns.rs
keccak256/: Cargo.toml
ledger-query/: .gitignore  Cargo.toml
ledger-query/src/: dynamodb.rs  genesis.rs  geth.rs  ledger.rs  main.rs  migrate.rs
maingate/: Cargo.toml
maingate/src/: instructions.rs  lib.rs  main_gate.rs  range.rs
pos_merkle/: Cargo.toml
pos_merkle/src/: lib.rs  utils.rs
pos_merkle/src/ecdsa/: mod.rs
pos_merkle/src/merkle/: chip.rs  expr1.rs  expr2.rs  merkle_path.rs  mod.rs  sign_verify.rs  zkevm.rs
pos_merkle/src/zkevm_circuits/: mod.rs  table.rs  util.rs
pos_merkle/src/zkevm_circuits/evm_circuit/: util.rs
prf_gen/: Cargo.toml
prf_gen/src/: hexutils.rs  main.rs  proof.rs
prfs_backend/: Cargo.toml
prfs_backend/src/: lib.rs  main.rs
prfs_client/: Cargo.toml
prfs_client/src/: main.rs  proof.rs
prfs_db_interface/: Cargo.toml
prfs_db_interface/src/: lib.rs
prfs_frontend/: package-lock.json  package.json
prfs_frontend/pages/: _app.tsx  index.tsx
prfs_frontend/styles/: globals.css
prfs_proofs/: Cargo.toml
prfs_proofs/src/: lib.rs  merkle_path.rs
prfs_proofs/src/expr/: expr1.rs  expr2.rs  mod.rs  sign_verify.rs
prfs_proofs/src/merkle/: mod.rs  secp.rs  sign_verify.rs  test1.rs
prfs_tree_maker/: .gitignore  Cargo.toml  sample.env
prfs_tree_maker/src/: config.rs  grow.rs  hexutils.rs  leaves.rs  lib.rs  main.rs
scripts/: build_wasm.sh
tree_maker/: Cargo.toml
tree_maker/src/: climb.rs  dynamodb.rs  grow.rs  hexutils.rs  leaves.rs  main.rs  rds.rs  tree.rs
wasm-bindgen-rayon/: package-lock.json
wasm-bindgen-rayon/demo/: index.js  package-lock.json  package.json  wasm-worker.js  webpack.config.js
wasm-bindgen-rayon/test/: webpack.config.mjs
web/: Cargo.toml  next.config.js  package-lock.json  package.json  wasm-worker.js  wasm-worker.mjs
web/public/: wasm-worker.js
web/src/pages/: _document.tsx  index.tsx
web/wasm_src/: id1.rs  lib.rs  temp.rs
web_backend/: package-lock.json  package.json
web_backend/src/: index.ts
web_demo/: Cargo.toml  package-lock.json
zkevm-circuits/: Cargo.toml
zkevm-circuits/src/: lib.rs  root_circuit.rs  snark_verifier2.rs  tx_circuit.rs  tx_circuit2.rs
(+170 files in other folders)
