[workspace]
members = [
    "halo2",
    "halo2_gadgets",
    "halo2_proofs",

    "halo2wrong",
    "ecc",
    "ecdsa",
    "integer",
    "maingate",
    "halo2curves",
    "web",

    "bus-mapping",
    "keccak256",
    "gadgets",
    "mock",
    "external-tracer",
    "geth-utils",

    "tree_maker",
    "prfs_proofs",
    "prfs_client",
    "prfs_backend",

    "web_demo",
]
