[workspace]
members = [
    "halo2",
    "halo2_gadgets",
    "halo2_proofs",

    "halo2wrong",
    "ecc",
    "ecdsa",
    "integer",
    "maingate",
    "halo2curves",
    "web",

    "bus-mapping",
    "keccak256",
    "gadgets",
    "mock",
    "external-tracer",
    "geth-utils",

    "prfs_proofs",
    "prfs_client",
    "prfs_backend",
    "prfs_tree_maker",

    "web_demo",
]
