[workspace]
members = [
    "halo2",
    "halo2_gadgets",
    "halo2_proofs",

    "halo2wrong",
    "ecc",
    "ecdsa",
    "integer",
    "maingate",
    "halo2curves",
    "web",

    "bus-mapping",
    "keccak256",
    "gadgets",
    "mock",
    "external-tracer",
    "geth-utils",

    "web_demo",
]
