[package]
name = "pos_merkle"
version = "0.0.1"
edition = "2021"
rust-version = "1.56.1"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
halo2_proofs = { path = "../halo2_proofs" }
halo2_gadgets = { path = "../halo2_gadgets" }
ecc = { path = "../ecc" }
integer = { path = "../integer" }
maingate = { path = "../maingate" }
group = "0.12"
rand = "0.8"
ff = "0.12"
web-sys = { version = "0.3.61", features = ["console"] }

[lib]
bench = false

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }
