[package]
name = "prfs_proofs"
version = "0.0.1"
edition = "2021"
rust-version = "1.56.1"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
group = "0.12"
rand = "0.8"
ff = "0.12"
hex = "0.4.3"
log = "0.4"
itertools = "0.10.3"
strum = "0.24"
strum_macros = "0.24"
num = "0.4"
rand_chacha = "0.3"
ethers-core = "0.17.0"
pretty_assertions = "1.0.0"
rand_xorshift = "0.3"


halo2_proofs = { path = "../halo2_proofs" }
halo2_gadgets = { path = "../halo2_gadgets" }
keccak256 = { path = "../keccak256" }
mock = { path = "../mock" }
gadgets = { path = "../gadgets" }
ecc = { path = "../ecc" }
ecdsa = { path = "../ecdsa" }
integer = { path = "../integer" }
maingate = { path = "../maingate" }
eth-types = { path = "../eth-types" }
bus-mapping = { path = "../bus-mapping", features = ["test"] }


[lib]
bench = false

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }
