[package]
name = "tree_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
log = "0.4"
simple-logging = "2.0"
chrono = "0.4.23"
hyper-tls = "0.5.0"
tokio-stream = "0.1"
aws-sdk-rds = "0.24.0"
